[package]
name = "parser-tarea-3"
version = "0.1.0"
authors = ["alegayndra <alegayndra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "duck_lib"
path = "lib/littleduck.rs"

[[bin]]
name = "monkey_exe"
path = "src/main.rs"

[dependencies]
nom = "6.0"
